--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       </div>
 
       <div class="card">
-        <div id="hero__slide" class="carousel slide carousel-fade" >
+        <div id="hero__slide" class="carousel slide carousel-fade">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="hero__card-content">
@@ -234,8 +234,8 @@
           </div>
           <div class="hero__slide-action">
 
-            <button id="prevBtn" class="hero__slide-control hero__slide-control--prev" type="button" data-bs-target="#hero__slide"
-              data-bs-slide="prev">
+            <button id="prevBtn" class="hero__slide-control hero__slide-control--prev" type="button"
+              data-bs-target="#hero__slide" data-bs-slide="prev">
               <i class="fa-solid fa-chevron-left hero__slide-icon"></i>
             </button>
 
@@ -257,10 +257,150 @@
 
 
 
-            <button id="nextBtn" class="hero__slide-control hero__slide-control--next" type="button" data-bs-target="#hero__slide"
-              data-bs-slide="nextt">
+            <button id="nextBtn" class="hero__slide-control hero__slide-control--next" type="button"
+              data-bs-target="#hero__slide" data-bs-slide="nextt">
               <i class="fa-solid fa-chevron-right hero__slide-icon"></i>
             </button>
+          </div>
+        </div>
+
+
+      </div>
+    </section>
+
+    <section class="our-projects">
+      <div class="container">
+        <div class="our-projects__heading">
+          <h3 class="our-projects__title">مشاريعنا</h3>
+          <div class="our-projects__pattern">
+            <img src="./assets/img/static/section-pattern.svg" alt="">
+          </div>
+        </div>
+        <div class="our-projects__owl-nav" dir="rtl">
+          <button id="prev"class='owl-prev'>
+            <i class="fa-solid fa-chevron-right owl-right-icon our-projects__owl-nav--right"></i>
+            <!-- <i class="fa-solid fa-chevron-right owl-right-icon our-projects__owl-nav--left"></i> -->
+          </button>
+          <button id="next"class='owl-next'>
+            <i class="fa-solid fa-chevron-left our-projects__owl-nav--left"></i>
+            <!-- <i class="fa-solid fa-chevron-right our-projects__owl-nav--right"></i> -->
+          </button>
+        </div>
+        <div class="our-projects__container owl-carousel">
+          <div class="our-projects__item">
+            <div class="our-projects__cover-wrapper">
+              <div class="our-projects__cover">
+                <img class="our-projects__cover-img" src="./assets/img/dynamic/project-2.jpg" alt="">
+              </div>
+              <div class="our-projects__overlay"></div>
+              <div class="our-projects__overlay-pattern">
+                <img src="./assets/img/dynamic/pattern.svg" alt="" />
+              </div>
+              <div class="our-projects__date">08 نوفمبر 2023</div>
+            </div>
+            <div class="our-projects__description">
+              <div class="our-projects__title">
+                <h2>تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب المرجانية والسلاحف في</h2>
+              </div>
+              <div class="our-projects__details">
+                <p>تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب المرجانية والسلاحف في</p>
+              </div>
+              <div class="our-projects__action">
+                <a class="primary-btn" href="#">التفاصيل</a>
+              </div>
+            </div>
+          </div>
+          <div class="our-projects__item">
+            <div class="our-projects__cover-wrapper">
+              <div class="our-projects__cover">
+                <img class="our-projects__cover-img" src="./assets/img/dynamic/project-2.jpg" alt="">
+              </div>
+              <div class="our-projects__overlay"></div>
+              <div class="our-projects__overlay-pattern">
+                <img src="./assets/img/dynamic/pattern.svg" alt="" />
+              </div>
+              <div class="our-projects__date">08 نوفمبر 2023</div>
+            </div>
+            <div class="our-projects__description">
+              <div class="our-projects__title">
+                <h2>تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب المرجانية والسلاحف في</h2>
+              </div>
+              <div class="our-projects__details">
+                <p>تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب المرجانية والسلاحف في</p>
+              </div>
+              <div class="our-projects__action">
+                <a class="primary-btn" href="#">التفاصيل</a>
+              </div>
+            </div>
+          </div>
+          <div class="our-projects__item">
+            <div class="our-projects__cover-wrapper">
+              <div class="our-projects__cover">
+                <img class="our-projects__cover-img" src="./assets/img/dynamic/project-2.jpg" alt="">
+              </div>
+              <div class="our-projects__overlay"></div>
+              <div class="our-projects__overlay-pattern">
+                <img src="./assets/img/dynamic/pattern.svg" alt="" />
+              </div>
+              <div class="our-projects__date">08 نوفمبر 2023</div>
+            </div>
+            <div class="our-projects__description">
+              <div class="our-projects__title">
+                <h2>تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب المرجانية والسلاحف في</h2>
+              </div>
+              <div class="our-projects__details">
+                <p>تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب المرجانية والسلاحف في</p>
+              </div>
+              <div class="our-projects__action">
+                <a class="primary-btn" href="#">التفاصيل</a>
+              </div>
+            </div>
+          </div>
+          <div class="our-projects__item">
+            <div class="our-projects__cover-wrapper">
+              <div class="our-projects__cover">
+                <img class="our-projects__cover-img" src="./assets/img/dynamic/project-2.jpg" alt="">
+              </div>
+              <div class="our-projects__overlay"></div>
+              <div class="our-projects__overlay-pattern">
+                <img src="./assets/img/dynamic/pattern.svg" alt="" />
+              </div>
+              <div class="our-projects__date">08 نوفمبر 2023</div>
+            </div>
+            <div class="our-projects__description">
+              <div class="our-projects__title">
+                <h2>تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب المرجانية والسلاحف في</h2>
+              </div>
+              <div class="our-projects__details">
+                <p>تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب المرجانية والسلاحف في</p>
+              </div>
+              <div class="our-projects__action">
+                <a class="primary-btn" href="#">التفاصيل</a>
+              </div>
+            </div>
+          </div>
+          <div class="our-projects__item">
+            <div class="our-projects__cover-wrapper">
+              <div class="our-projects__cover">
+                <img class="our-projects__cover-img" src="./assets/img/dynamic/project-2.jpg" alt="">
+              </div>
+              <div class="our-projects__overlay"></div>
+              <div class="our-projects__overlay-pattern">
+                <img src="./assets/img/dynamic/pattern.svg" alt="" />
+              </div>
+              <div class="our-projects__date">08 نوفمبر 2023</div>
+            </div>
+            <div class="our-projects__description">
+              <div class="our-projects__title">
+                <h2>تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب المرجانية والسلاحف في</h2>
+              </div>
+              <div class="our-projects__details">
+                <p>تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب المرجانية والسلاحف في</p>
+              </div>
+              <div class="our-projects__action">
+                <a class="primary-btn" href="#">التفاصيل</a>
+              </div>
+            </div>
           </div>
         </div>
 
