--- a/index.html
+++ b/index.html
@@ -408,6 +408,65 @@
       </div>
     </section>
 
+
+    <section class="news bg-mint">
+      <div class="container">
+        <div class="news__heading">
+          <h2>الأخبار</h2>
+          <div class="news__pattern">
+            <img src="./assets/img/dynamic/news-pattern.svg" alt="">
+          </div>
+        </div>
+        <div class="news__heading-action">
+          <a href="#">
+            <span class="news__heading-action-text">مشاهدة الكل</span>
+            <button class="news__heading-action-btn">
+            <i class="fa-solid fa-chevron-left"></i>
+            </button>
+          </a>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="contact">
+      <div class="container">
+      <div class="contact__heading">
+        <h2>معلومات الإتصال</h2>
+        <div class="contact__bg">
+        </div>
+      </div>
+      <div class="contact__content">
+        <p>سعداء باستقبالكم، كل یوم ثلاثاء، في تمام الساعة 10 ً صباحا</p>
+        <p>المؤسسة العامة للمحافظة على الشعب المرجانیة والسلاحف في البحر الأحمر</p>
+      </div>
+      <div class="row">
+        <div class="col-7">
+      <div class="contact__info">
+        <div>
+          <img src="" alt="">
+          <h5>البريد الإلكتروني</h5>
+          <p>ceo-office@shams.gov.sa</p>
+        </div>
+        <div>
+          <img src="" alt="">
+          <h5>رقم الهاتف</h5>
+          <p>00966 12 676 66666</p>
+        </div>
+        <div>
+          <img src="" alt="">
+          <h5>الموقع</h5>
+          <p>المركز الوطني للأرصاد الدور1 -الورود-جدة</p>
+        </div>
+      </div>
+      </div>
+      <div class="col-5">
+        <div class="bg-blue-light contact__social-content"></div>
+      </div>
+      </div>
+      </div>
+    </section>
+
     <section class="links">
       <div class="container">
         <div class="links__slide">
