--- a/index.html
+++ b/index.html
@@ -433,7 +433,8 @@
       <div class="container">
       <div class="contact__heading">
         <h2>معلومات الإتصال</h2>
-        <div class="contact__bg">
+        <div class="contact__pattern">
+          <img src="./assets/img//dynamic/news-pattern.svg" alt="">
         </div>
       </div>
       <div class="contact__content">
