add news section

--- a/index.html
+++ b/index.html
@@ -277,11 +277,11 @@
           </div>
         </div>
         <div class="our-projects__owl-nav" dir="rtl">
-          <button id="prev"class='owl-prev'>
+          <button id="prev" class='owl-prev'>
             <i class="fa-solid fa-chevron-right owl-right-icon our-projects__owl-nav--right"></i>
             <!-- <i class="fa-solid fa-chevron-right owl-right-icon our-projects__owl-nav--left"></i> -->
           </button>
-          <button id="next"class='owl-next'>
+          <button id="next" class='owl-next'>
             <i class="fa-solid fa-chevron-left our-projects__owl-nav--left"></i>
             <!-- <i class="fa-solid fa-chevron-right our-projects__owl-nav--right"></i> -->
           </button>
@@ -421,9 +421,89 @@
           <a href="#">
             <span class="news__heading-action-text">مشاهدة الكل</span>
             <button class="news__heading-action-btn">
-            <i class="fa-solid fa-chevron-left"></i>
+              <i class="fa-solid fa-chevron-left"></i>
             </button>
           </a>
+        </div>
+      </div>
+      <div class="container">
+        <div class="news__tabs">
+          <div class="d-flex align-items-start">
+            <div class="row">
+              <div class="col-12 col-md-3">
+                <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                  <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill"
+                    data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home"
+                    aria-selected="true">
+                    <div class="new__tabs__nav_title">
+                      <h4>
+                        تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر و
+                        جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                        الدراسات، والأبحاث التطويرية، والتدريب
+                      </h4>
+                    </div>
+                    <div class="new__tabs__nav_subtitle">
+                      <h5>
+                        تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر و
+                        جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                        الدراسات، والأبحاث التطويرية، والتدريب
+                      </h5>
+                    </div>
+                  </button>
+                  <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill"
+                    data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile"
+                    aria-selected="false">
+                    <div class="new__tabs__nav_title">
+                      <h4>
+                        تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر و
+                        جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                        الدراسات، والأبحاث التطويرية، والتدريب
+                      </h4>
+                    </div>
+                    <div class="new__tabs__nav_subtitle">
+                      <h5>
+                        تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر و
+                        جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                        الدراسات، والأبحاث التطويرية، والتدريب
+                      </h5>
+                    </div>
+                  </button>
+                  <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill"
+                    data-bs-target="#v-pills-messages" type="button" role="tab" aria-controls="v-pills-messages"
+                    aria-selected="false">
+                    <div class="new__tabs__nav_title">
+                      <h4>
+                        تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر و
+                        جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                        الدراسات، والأبحاث التطويرية، والتدريب
+                      </h4>
+                    </div>
+                    <div class="new__tabs__nav_subtitle">
+                      <h5>
+                        تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر و
+                        جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                        الدراسات، والأبحاث التطويرية، والتدريب
+                      </h5>
+                    </div>
+                  </button>
+                </div>
+              </div>
+              <div class="col-12 col-md-9">
+                <div class="tab-content" id="v-pills-tabContent">
+                  <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
+                    aria-labelledby="v-pills-home-tab" tabindex="0">...</div>
+                  <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab"
+                    tabindex="0">...</div>
+                  <div class="tab-pane fade" id="v-pills-disabled" role="tabpanel" aria-labelledby="v-pills-disabled-tab"
+                    tabindex="0">...</div>
+                  <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab"
+                    tabindex="0">...</div>
+                  <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab"
+                    tabindex="0">...</div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -431,39 +511,39 @@
 
     <section class="contact">
       <div class="container">
-      <div class="contact__heading">
-        <h2>معلومات الإتصال</h2>
-        <div class="contact__bg">
+        <div class="contact__heading">
+          <h2>معلومات الإتصال</h2>
+          <div class="contact__bg">
+          </div>
         </div>
-      </div>
-      <div class="contact__content">
-        <p>سعداء باستقبالكم، كل یوم ثلاثاء، في تمام الساعة 10 ً صباحا</p>
-        <p>المؤسسة العامة للمحافظة على الشعب المرجانیة والسلاحف في البحر الأحمر</p>
-      </div>
-      <div class="row">
-        <div class="col-7">
-      <div class="contact__info">
-        <div>
-          <img src="" alt="">
-          <h5>البريد الإلكتروني</h5>
-          <p>ceo-office@shams.gov.sa</p>
+        <div class="contact__content">
+          <p>سعداء باستقبالكم، كل یوم ثلاثاء، في تمام الساعة 10 ً صباحا</p>
+          <p>المؤسسة العامة للمحافظة على الشعب المرجانیة والسلاحف في البحر الأحمر</p>
         </div>
-        <div>
-          <img src="" alt="">
-          <h5>رقم الهاتف</h5>
-          <p>00966 12 676 66666</p>
+        <div class="row">
+          <div class="col-7">
+            <div class="contact__info">
+              <div>
+                <img src="" alt="">
+                <h5>البريد الإلكتروني</h5>
+                <p>ceo-office@shams.gov.sa</p>
+              </div>
+              <div>
+                <img src="" alt="">
+                <h5>رقم الهاتف</h5>
+                <p>00966 12 676 66666</p>
+              </div>
+              <div>
+                <img src="" alt="">
+                <h5>الموقع</h5>
+                <p>المركز الوطني للأرصاد الدور1 -الورود-جدة</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-5">
+            <div class="bg-blue-light contact__social-content"></div>
+          </div>
         </div>
-        <div>
-          <img src="" alt="">
-          <h5>الموقع</h5>
-          <p>المركز الوطني للأرصاد الدور1 -الورود-جدة</p>
-        </div>
-      </div>
-      </div>
-      <div class="col-5">
-        <div class="bg-blue-light contact__social-content"></div>
-      </div>
-      </div>
       </div>
     </section>
 
