edit news section

--- a/index.html
+++ b/index.html
@@ -430,12 +430,13 @@
         <div class="news__tabs">
           <div class="d-flex align-items-start">
             <div class="row">
-              <div class="col-12 col-md-3">
-                <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                  <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill"
-                    data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home"
+              <div class="col-12 col-md-4 d-flex">
+                <div class="nav news__tabs__nav flex-column nav-pills" id="v-pills-tab" role="tablist"
+                  aria-orientation="vertical">
+                  <button class="nav-link active" id="v-pills-first-tab" data-bs-toggle="pill"
+                    data-bs-target="#v-pills-first" type="button" role="tab" aria-controls="v-pills-first"
                     aria-selected="true">
-                    <div class="new__tabs__nav_title">
+                    <div class="new__tabs__nav__title">
                       <h4>
                         تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر و
                         جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
@@ -450,10 +451,10 @@
                       </h5>
                     </div>
                   </button>
-                  <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill"
-                    data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile"
+                  <button class="nav-link" id="v-pills-second-tab" data-bs-toggle="pill"
+                    data-bs-target="#v-pills-second" type="button" role="tab" aria-controls="v-pills-second"
                     aria-selected="false">
-                    <div class="new__tabs__nav_title">
+                    <div class="new__tabs__nav__title">
                       <h4>
                         تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر و
                         جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
@@ -468,10 +469,9 @@
                       </h5>
                     </div>
                   </button>
-                  <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill"
-                    data-bs-target="#v-pills-messages" type="button" role="tab" aria-controls="v-pills-messages"
-                    aria-selected="false">
-                    <div class="new__tabs__nav_title">
+                  <button class="nav-link" id="v-pills-third-tab" data-bs-toggle="pill" data-bs-target="#v-pills-third"
+                    type="button" role="tab" aria-controls="v-pills-third" aria-selected="false">
+                    <div class="new__tabs__nav__title">
                       <h4>
                         تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر و
                         جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
@@ -488,18 +488,80 @@
                   </button>
                 </div>
               </div>
-              <div class="col-12 col-md-9">
-                <div class="tab-content" id="v-pills-tabContent">
-                  <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
-                    aria-labelledby="v-pills-home-tab" tabindex="0">...</div>
-                  <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab"
-                    tabindex="0">...</div>
-                  <div class="tab-pane fade" id="v-pills-disabled" role="tabpanel" aria-labelledby="v-pills-disabled-tab"
-                    tabindex="0">...</div>
-                  <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab"
-                    tabindex="0">...</div>
-                  <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab"
-                    tabindex="0">...</div>
+              <div class="col-12 col-md-8 d-flex">
+                <div class="tab-content news__tabs__content w-100" id="v-pills-tabContent">
+                  <div class="tab-pane fade show active" id="v-pills-first" role="tabpanel"
+                    aria-labelledby="v-pills-first-tab" tabindex="0">
+                    <div class="news__tabs__content__wrapper">
+                      <img src="./assets/img/dynamic/project-2.jpg" alt="">
+                      <div class="layer">
+                      </div>
+                      <div class="news__tabs__content__wrapper__description">
+                        <p>08 نوفمبر 2023</p>
+                        <h4>
+                          تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر
+                          و
+                          جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                          الدراسات، والأبحاث التطويرية، والتدريب
+                        </h4>
+                        <h5>
+                          تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر
+                          و
+                          جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                          الدراسات، والأبحاث التطويرية، والتدريب
+                        </h5>
+                        <a href="#" class="primary-btn">التفاصيل</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tab-pane fade" id="v-pills-second" role="tabpanel" aria-labelledby="v-pills-second-tab"
+                    tabindex="0">
+                    <div class="news__tabs__content__wrapper">
+                      <img src="./assets/img/dynamic/project-2.jpg" alt="">
+                      <div class="layer">
+                      </div>
+                      <div class="news__tabs__content__wrapper__description">
+                        <p>08 نوفمبر 2023</p>
+                        <h4>
+                          تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر
+                          و
+                          جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                          الدراسات، والأبحاث التطويرية، والتدريب
+                        </h4>
+                        <h5>
+                          تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر
+                          و
+                          جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                          الدراسات، والأبحاث التطويرية، والتدريب
+                        </h5>
+                        <a href="#" class="primary-btn">التفاصيل</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tab-pane fade" id="v-pills-third" role="tabpanel" aria-labelledby="v-pills-third-tab"
+                    tabindex="0">
+                    <div class="news__tabs__content__wrapper">
+                      <img src="./assets/img/dynamic/project-2.jpg" alt="">
+                      <div class="layer">
+                      </div>
+                      <div class="news__tabs__content__wrapper__description">
+                        <p>08 نوفمبر 2023</p>
+                        <h4>
+                          تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر
+                          و
+                          جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                          الدراسات، والأبحاث التطويرية، والتدريب
+                        </h4>
+                        <h5>
+                          تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر
+                          و
+                          جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                          الدراسات، والأبحاث التطويرية، والتدريب
+                        </h5>
+                        <a href="#" class="primary-btn">التفاصيل</a>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -511,40 +573,40 @@
 
     <section class="contact">
       <div class="container">
-      <div class="contact__heading">
-        <h2>معلومات الإتصال</h2>
-        <div class="contact__pattern">
-          <img src="./assets/img//dynamic/news-pattern.svg" alt="">
+        <div class="contact__heading">
+          <h2>معلومات الإتصال</h2>
+          <div class="contact__pattern">
+            <img src="./assets/img//dynamic/news-pattern.svg" alt="">
+          </div>
         </div>
-      </div>
-      <div class="contact__content">
-        <p>سعداء باستقبالكم، كل یوم ثلاثاء، في تمام الساعة 10 ً صباحا</p>
-        <p>المؤسسة العامة للمحافظة على الشعب المرجانیة والسلاحف في البحر الأحمر</p>
-      </div>
-      <div class="row">
-        <div class="col-7">
-      <div class="contact__info">
-        <div>
-          <img src="" alt="">
-          <h5>البريد الإلكتروني</h5>
-          <p>ceo-office@shams.gov.sa</p>
+        <div class="contact__content">
+          <p>سعداء باستقبالكم، كل یوم ثلاثاء، في تمام الساعة 10 ً صباحا</p>
+          <p>المؤسسة العامة للمحافظة على الشعب المرجانیة والسلاحف في البحر الأحمر</p>
         </div>
-        <div>
-          <img src="" alt="">
-          <h5>رقم الهاتف</h5>
-          <p>00966 12 676 66666</p>
+        <div class="row">
+          <div class="col-7">
+            <div class="contact__info">
+              <div>
+                <img src="" alt="">
+                <h5>البريد الإلكتروني</h5>
+                <p>ceo-office@shams.gov.sa</p>
+              </div>
+              <div>
+                <img src="" alt="">
+                <h5>رقم الهاتف</h5>
+                <p>00966 12 676 66666</p>
+              </div>
+              <div>
+                <img src="" alt="">
+                <h5>الموقع</h5>
+                <p>المركز الوطني للأرصاد الدور1 -الورود-جدة</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-5">
+            <div class="bg-blue-light contact__social-content"></div>
+          </div>
         </div>
-        <div>
-          <img src="" alt="">
-          <h5>الموقع</h5>
-          <p>المركز الوطني للأرصاد الدور1 -الورود-جدة</p>
-        </div>
-      </div>
-      </div>
-      <div class="col-5">
-        <div class="bg-blue-light contact__social-content"></div>
-      </div>
-      </div>
       </div>
     </section>
 
